--- a/OpenGL_BatchRenderer/OpenGL_BatchRenderer.vcxproj.filters
+++ b/OpenGL_BatchRenderer/OpenGL_BatchRenderer.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\OpenGLUtils\UtilClasses\Renderer\InstanceRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\OpenGLUtils\UtilClasses\Renderer\Renderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\OpenGLUtils\Callbacks\CallBackFunctions.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\OpenGLUtils\UtilClasses\Renderer\InstanceRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OpenGLUtils\UtilClasses\Renderer\Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
